--- a/package.json
+++ b/package.json
@@ -1,18 +1,46 @@
 {
+  "homepage": "https://dudkoserhei.github.io/matter",
+  "name": "matter",
   "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "lint": "next lint",
+    "pretty": "prettier --write '**/*.{js,ts,tsx}'",
     "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "next": "latest",
+    "prettier-eslint": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-define": "^1.3.0"
+    "@types/node": "^16.4.8",
+    "@types/react": "^17.0.15",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-define": "^1.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
+    "prettier": "2.3.2",
+    "typescript": "^4.3.5"
+  },
+  "pre-commit": [
+    "pretty",
+    "lint"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
