--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "next export",
     "lint": "next lint",
     "pretty": "prettier --write '**/*.{js,ts,tsx}'",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -29,6 +29,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
     "prettier": "2.3.2",
