--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "latest",
     "prettier-eslint": "^13.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.37.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.8",
