--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,11 @@
   ],
   "rules": {
       "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
-      "react/jsx-props-no-spreading": "off"
+      "react/jsx-props-no-spreading": "off",
+      "jsx-a11y/anchor-is-valid": [ "error", {
+        "components": [ "Link" ],
+        "specialLink": [ "hrefLeft", "hrefRight" ],
+        "aspects": [ "invalidHref", "preferButton" ]
+      }]
   }
 }
