--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "classnames": "^2.2.6",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-prettier": "^3.4.0",
