--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-prettier": "^3.4.0",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
     "prettier-eslint": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.37.0"
   },
   "devDependencies": {
