--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
   "rules": {
       "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
       "react/jsx-props-no-spreading": "off",
+      "@next/next/no-img-element": "off",
       "jsx-a11y/anchor-is-valid": [ "error", {
         "components": [ "Link" ],
         "specialLink": [ "hrefLeft", "hrefRight" ],
