--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier-eslint": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-slick": "^0.28.1",
     "sass": "^1.38.0"
   },
